# OpenTranslate

./: CMakeLists.txt  PACKAGING.md  README.md  README.zh-CN.md  appconfig.h  baidutranslatorservice.cpp  baidutranslatorservice.h  configstore.cpp  configstore.h  l10n.cpp  l10n.h  main.cpp  settingswidget.cpp  settingswidget.h  settingswidget.ui  translate.cpp  translate.h  translate.ui  translationcachestore.cpp  translationcachestore.h  translatorservice.h
assets/: README.md
assets/icons/: app.icns
packaging/: OpenTranslate.rc.in
scripts/: generate_app_icons.sh
